--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "axios": "^1.13.2",
+    "fabric": "^6.9.0",
+    "firebase-admin": "^13.6.0",
+    "lucide-react": "^0.554.0",
+    "peerjs": "^1.5.5",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.6",
+    "socket.io-client": "^4.8.1",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
